--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Build-A-Board</title>
+  <title class="notranslate ">Build-A-Board</title>
   <base href="/">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -23,6 +23,26 @@
   <meta name="theme-color" content="#1976d2">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        includedLanguages: 'en,pt',  // Only English option
+        layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+        autoDisplay: false
+      }, 'google_translate_element');
+
+      // Select the element with the class '.VIpgJd-ZVi9od-xl07Ob-lTBxed'
+      const element = document.querySelector('.VIpgJd-ZVi9od-xl07Ob-lTBxed');
+      // Check if the element exists and then remove the href attribute
+      if (element) {
+        element.removeAttribute('href');
+      }
+    }
+  </script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  
+
 </head>
 <body>
   <app-root></app-root>
